--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=contacts_db;Username=postgres;Password=qwerty"
+  },
+  "client": "http://localhost:3000"
 }
