--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=contacts_db;Username=postgres;Password=qwerty"
+  },
+  "client": "http://localhost:3000"
 }
